--- a/Front/project_Full/public/index.html
+++ b/Front/project_Full/public/index.html
@@ -5,7 +5,17 @@
     <title>React App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body style="background-color: rgb(248, 249, 250);">
+  <style>
+    body{
+      background-image: url('./snow.gif');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+  <!-- <body style="background-color: rgb(248, 249, 250);"> -->
   <!-- <body style="background-color: red;"> -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=24abad7582ba34e0fef75efa7bb5d008&libraries=services"></script>
     <div id="root"></div>
