패키지 예약 목록과 상제 정보, 패키지 결제 페이지에 이미지 출력 기능 구현

--- a/Front/project_Full/public/index.html
+++ b/Front/project_Full/public/index.html
@@ -22,8 +22,7 @@
 
 <body>
   <!-- 카카오 맵 플랫폼에 등록을 위해서 개인 API 키 사용 -->
-  <script type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f845cf68793c9577535e2a6af883d4a9&libraries=services"></script> 
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f845cf68793c9577535e2a6af883d4a9&libraries=services"></script> 
   <div id="root"></div>
 </body>
 
